# CyclingSim

./: .clangd  .gitattributes  .gitignore  08_common_failure_modes.txt  ADJUSTABLE_PARAMS.md  AUDIT.md  CMakeLists.txt  PLAN.md  README.md  TODO  compile_commands.json  compile_commands.json.BAK  concat_files.py  files_contents.txt  imgui.ini  rebuild.sh  todo
.cache/clangd/index/: ArithmeticSequence.h.D5B25D9CC5198287.idx  Array.h.D61E799F8D15CDC9.idx  ArrayBase.h.0924FA45E402A8ED.idx  ArrayCwiseBinaryOps.inc.D0E4CE8A4D97CA27.idx  ArrayCwiseUnaryOps.inc.D20C8D8854183B20.idx  ArrayWrapper.h.77BE210133753687.idx  Assert.h.77BCB5A516962C61.idx  Assign.h.6D0A58E7EB0B0663.idx  AssignEvaluator.h.48E78549388D9022.idx  AssignmentFunctors.h.7EFD58B3482B6730.idx  BFloat16.h.98CDCCA4F0CBA98C.idx  BandMatrix.h.40785D5414B37D48.idx  BinaryFunctors.h.FA37756402F9F600.idx  BlasUtil.h.B1AB589BB46A881F.idx  Block.h.320AB0715181FE7F.idx  BlockMethods.inc.2F9341FB929F8BA1.idx  CommaInitializer.h.B1CDC4812B8826B0.idx  CommonCwiseBinaryOps.inc.99B14B205E1A2285.idx  CommonCwiseUnaryOps.inc.6818986AE39E1CF6.idx  Complex.h.C49550591BDFFCF1.idx  ConditionEstimator.h.168D783F9A970E83.idx  ConfigureVectorization.h.117618ECC1DEB658.idx  ConjHelper.h.1EC59508455A02E1.idx  Constants.h.6F3E2D8C74100B7B.idx  Core.5017F723195DC77D.idx  CoreEvaluators.h.CD5EC80A012EA4E5.idx  CoreIterators.h.9A4173C9DE30A603.idx  CwiseBinaryOp.h.E6D61E3D230664D5.idx  CwiseNullaryOp.h.7BA4777384B495E4.idx  CwiseTernaryOp.h.9B331D2A78DE5CE9.idx  CwiseUnaryOp.h.86DCFF74DB89A007.idx  CwiseUnaryView.h.E1E876FECEBDFEBB.idx  DenseBase.h.4366FE79F6070377.idx  DenseCoeffsBase.h.0EFFC774CA5D80B3.idx  DenseStorage.h.B6A77C2BE35D4F8F.idx  DeviceWrapper.h.993F1DA9B12B367C.idx  Diagonal.h.D72EDB89C757689B.idx  DiagonalMatrix.h.56A1C9DFB172B310.idx  DiagonalProduct.h.4B86010C6A00BC54.idx  DisableStupidWarnings.h.C76D79900C160FB9.idx  (+174 more)
core/include/: sim_core.h
core/src/: sim_core.c
include/: analysis.h  appstate.h  camera.h  collision_params.h  corerenderer.h  course.h  course_intel.h  decision.h  display.h  drafting.h  drafting_params.h  effortschedule.h  energymodel.h  follow.h  follow_params.h  group.h  grouping_params.h  helpers.h  lateral_behavior.h  lateral_solver.h  layout_types.h  mytypes.h  pch.hpp  plotrenderer.h  plotting.h  race_clock.h  realtime_runner.h  rider.h  rotation.h  rotation_params.h  screen.h  screenmanager.h  sim.h  simcontrol.h  simrenderer.h  simulationrenderer.h  sliders.h  snapshot.h  team.h  texturemanager.h  (+4 more)
kb/: 00_project_overview.txt  01_architecture.txt  02_physics_model.txt  03_rendering_pipeline.txt  04_threading_and_timing.txt  05_core_interfaces.txt  06_extensibility_notes.txt  07_known_tradeoffs.txt  08_common_failure_modes.txt  99_glossary.txt
perf/: perf.data  perf_render  perf_report
resources/armat/: example_usage.py  spritesheet_grid_manifest.txt  src.py
scripts/: concat_files.py  kb.py  plot_csv.py  sigmoid_values.csv
src/: analysis.cpp  appstate.cpp  camera.cpp  corerenderer.cpp  course.cpp  course_intel.cpp  decision.cpp  display.cpp  drafting.cpp  energymodel.cpp  follow.cpp  group.cpp  helpers.cpp  lateral_behavior.cpp  lateral_solver.cpp  main.cpp  plotrenderer.cpp  plotting.cpp  race_clock.cpp  realtime_runner.cpp  rider.cpp  rotation.cpp  screen.cpp  screenmanager.cpp  sim.cpp  simrenderer.cpp  simulationrenderer.cpp  sliders.cpp  texturemanager.cpp  timetrial.cpp  ui_layout.cpp  widget.cpp
tests/: test_course.cpp  test_course_intel.cpp  test_decision.cpp  test_display.cpp  test_drafting.cpp  test_follow.cpp  test_ftp_degrade.cpp  test_group_tracker.cpp  test_lateral_physics.cpp  test_race_clock.cpp  test_rider.cpp  test_rotation.cpp  test_widget.cpp  test_wind.cpp
tests/core/: test_cruise_power.c  test_cruise_speed.c  test_energy_basic.c  test_energy_sigmoid.c  test_ftp_factors.c  test_solver_compare.c  test_solver_timing.c  test_terminal_velocity.c  test_wind_core.c
